# ms-identity-web

./: .pypirc  LICENSE  README.md  pyproject.toml
