[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ms-identity-web"
version = "0.0.1"
authors = [
    { name="andresbedoyagomez", email="andresbedoyagomez@gmail.com" },
]
description = "Libreria para autenticacion con Azure AD"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aabedoya/ms-identity-web"
"Bug Tracker" = "https://github.com/aabedoya/ms-identity-web/issues"